app/styles/dark.scss
.sca-dark{background-color: #383d40;text-shadow:none!important; border-color:#414548}
.sca-dark .saved-list, .sca-dark .saved-list .btn-default, .sca-dark, .sca-dark .model-header h4 {color:#eee}
.sca-dark .btn-default[disabled]{color:#bdbdbd!important;    border-top: 1px #262a2d solid !important;}

.sca-dark .create-new-concept{background-color: #2d3134!important; color:#00a6e5!important;}
.sca-dark .create-new-concept:hover{color:#eee!important;}

.sca-dark .card {
    position: relative;
    background-color: #2d3134;
    box-sizing: border-box;
    border-radius: 2px;
    margin-bottom: 0px;
	color:#fff;
	border-color:#4F4F4F;
	box-shadow: none!important;
}
.sca-dark .saved-list-buttons{color:#bdbdbd!important}
.sca-dark .editing-form button:active, .sca-dark .editing-form button:focus, {background-color:transparent!important;}
/*tables */
.sca-dark .table-search {
    padding: 0px;
}
.sca-dark .table-search [type=text].form-control{    
    border: none;
    border-radius: 0;
    -webkit-appearance: none;
    box-shadow: inset 0 -1px 0 #262a2d;
    font-size: 13px;
    background-color: #32373a;
    padding: 20px 10px;
    margin-top: 10px;
}
.sca-dark .theme-secondary-text, a {
    color: #5cbaff;
}
.sca-dark .table-full thead {
    background: #383d40;
	color:#eee;
}
.sca-dark .table > thead > tr > th{border-bottom: 2px solid #2d3134;text-shadow:none!important}
.sca-dark .white {
    color: #FFF !important;
    background: #2d3134!important;
}
.sca-dark .table-full{background:#32373a}
.sca-dark table {
    border-color:#6e6e6e;
	margin-bottom:10px;
}
.sca-dark .table > tbody > tr > td, .sca-dark .table > tbody > tr > th {
  
    border-top: 1px solid #2d3134;
}
.sca-dark .navbar-default{background: #262a2d; border-bottom: 1px rgba(0, 0, 0, .07)solid;}
.sca-dark .dashboard-sidebar button {
    width: 100%;
    padding: 15px;
    font-size: 15px;
    text-transform: none;
    color: #fff;
    text-align: left
}
.sca-dark .dashboard-sidebar {
    background: #262a2d;
    border-right: 1px rgba(0, 0, 0, .07)solid;
}
.sca-dark .dashboard-sidebar button {
    margin: 0;
    padding: 15px;
    color: #eeeeee;
    width: 100%;
    background: #262a2d;
}
.sca-dark .dashboard-sidebar button a {
    margin: 0;
    color: #737373;
}
.sca-dark .dashboard-sidebar button:hover,
.sca-dark .dashboard-sidebar button:active,
{
    background: #2d3134!important;
}
/*button colors */
.sca-dark .red {
    color: #e92848;
    background-color: transparent;
}
.sca-dark .green.lighten-2 {
    background-color: transparent;
    color: #81C784;
}
.sca-dark .pink.darken-2 {
    background-color: transparent;
    color: #d81b60
}
.sca-dark .deep-purple {
    color: #8b72b7;
    background-color: transparent;
}
.sca-dark .pink.darken-1 {
    background-color: transparent;
    color: #d81b60
}
.sca-dark .red.lighten-2 {
    background-color: transparent;
    color: #d01c3e
}
.sca-dark .grey {
    background-color: #2d3134;
    color: #eee
}
.sca-dark .Review.Completed.badge {
    background-color: transparent;
    font-size: 13px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
    color: #01A2E1
}
.sca-dark .In.Progress.badge {
    background-color: transparent;
    font-size: 13px;
    color: #db207e;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
}
.sca-dark .In.Review.badge {
    background-color: transparent;
    color: #32ae1a;
    font-size: 13px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
}
.sca-dark .Available.badge {
    background-color: transparent;
    color: #00b0ff;
    font-size: 13px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
}
.sca-dark .Claimed.badge {
    background-color: transparent;
    color: gray;
    font-size: 13px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
}

/* Edit View */

.sca-dark .button-nav {
    border-right: 1px #262a2d solid!important;
    background-color: #2d3134;
}
.sca-dark .button-nav .blue.darken-2,
.sca-dark .button-nav .yellow.darken-2 {
    border-bottom: 1px #262a2d solid!important;
    border-top: 1px #262a2d solid!important;
    border-right: 1px #262a2d solid!important
}
.sca-dark .button-nav .blue.darken-3,
.sca-dark .button-nav .blue.darken-4,
.sca-dark .button-nav .pink1,
.sca-dark .button-nav .deep-purple.lighten-1,
.sca-dark .button-nav .green.darken-1 {
    border-top: 1px #262a2d solid!important;
    border-right: 1px #262a2d solid!important
}
.sca-dark .blue.darken-2 {
    color: #1976D2;
    background-color: transparent;
}
/*widget buttons */

.sca-dark .widget-toolbar:hover {
    background-color: transparent!important;
    color: #eee!important
}
.sca-dark .classification-btn .btn-default:hover,
.sca-dark .classification-btn .btn-default span:hover {
    color: #eee!important
}
.sca-dark .task-details .green {
    background-color: #383d40;
}
.sca-dark .classification-btn .btn-default {
   border: 1px #2d3134 solid !important;
}
.sca-dark .classification-btn .btn-default:hover {
    color: #eee;
    background-color: transparent;
    border: 1px #262a2d solid!important;
}
/*edit buttons */

.sca-dark .small-buttons {
    padding: 0px 1% !important;
    font-size: 16px !important;
}
.sca-dark .small-buttons:hover {
    color: #474747 !important;
    background-color: transparent !important;
}
.sca-dark .morebuttons {
    color: #00a6e5;
    background: transparent
}
/*colors */

.sca-dark .blue {
    color: #00a6e5;
    background-color: transparent;
}
.sca-dark .orange.darken-3 {
    color: #ef6c00;
    background-color: transparent;
}
.sca-dark .light-blue {
    color: #03a9f4;
    background-color: transparent;
}
.sca-dark .blue.darken-3 {
    color: #1565C0;
    background-color: transparent;
}
.sca-dark .blue.darken-4 {
    color: #0D47A1;
    background-color: transparent;
}
.sca-dark .yellow.darken-2 {
    color: #ffcc00;
    background-color: transparent;
}
.sca-dark .deep-purple.lighten-1 {
    color: #7e6ecd;
    background-color: transparent;
}
.sca-dark .pink1 {
    color: #e91e63;
    background-color: transparent;
}
.sca-dark .green.darken-1 {
    color: #43A047;
    background-color: transparent;
}
.sca-dark .editpanel {
    background-color: #32373a;
	color:#aeb2b5;
}
.sca-dark .green {
    color: #4CAF50;
    background-color: transparent;
}

.sca-dark .blue.darken-1 {
    color: #009cd7;
    background-color: #383d40;
}
.sca-dark .blue.darken-1 {
    color: #009cd7;
    background-color: #383d40;
}
.sca-dark .navbar-default .btn-link {
    color: #737373;
}
.sca-dark .navbar-default .btn-link:hover {
    background-color: #eee;
}
.sca-dark .task-details button {
    background-color: #383d40!important;
}
.sca-dark .task-details button:hover {
    background-color: #262a2d!important;
}
/*nav Tabs*/
.sca-dark .sidebar-bg {
    background-color: #32373a;
}
.sca-dark .nav-tabs > li > a {
    margin-right: 0;
    background-color: #383d40!important;
    border: none;
    color: #eee;
    box-shadow: inset 0 -1px 0 #414548;
    transition: all .2s;
}
.sca-dark .sidebar-tabs.nav > li.active > a, .sca-dark .sidebar-tabs.nav > li > a:hover {
    width: 100%;
    padding: 0px;
    text-align: center;
    font-size: 18px;
    background-color: #32373a!important;
    color: #bebebe;
    box-shadow: none;
    color: #00a6e5;
}
.sca-dark .control-label {
    font-weight: 400;
    width: 100%;
    padding-bottom: 3px;
    margin-bottom: 3px;
    color:#babec1;
    transition: all .2s ease-out;
    box-shadow: inset 0 -1px 0 #32373a !important;
}
.sca-dark .timeline-title {
    font-size: 13px;
    margin: 0;
    font-weight: 400;
    color: #a2a5a7;
}
.sca-dark .classification-report, .sca-dark .feedback-header {
   
    background-color: #383d40;;
    margin-top: 5px;
    border-top: 1px solid #2d3134;
}
/*model box*/
.sca-dark .modelScrollBox {background-color:#3e4142}
.sca-dark .saved, .sca-dark .fa-close {color:#fff;}

.sca-dark .feedback-view .table > thead > tr > th, .sca-dark .feedback-view .table > thead > tr > td {
 
    border-color:#414548;
 
}

